css/main.css
html {
  box-sizing: border-box;
}

*, *::before, *::after {
  box-sizing: inherit;
  font-family: georgia, sans-serif;
  line-height: 1.5;
  background-color: #dbd6cf;
}

body {
  margin: 0rem
}

header {
  padding: .75em;
  background-color: #79756f;
  border-top: 3px solid #595652;
  border-bottom: 3px solid #595652;
}

h1 {
  color: #fff;
  background-color: #79756f;
  text-align: center;
  font-family: "Bevan";
  margin: 0rem
}

nav {
  list-style-type: georgian;
  text-decoration: none;
  background-color: #79756f;
  text-align: center;
}

ul {
  list-style: none;
  text-decoration: none;
  background-color: #79756f;
  text-align: center;
}

li {
  list-style: none;
  text-decoration: none;
  background-color: #79756f;
  display: inline-block;
  text-align: center;
}

a {
  display: inline-block;
  text-align: center;
  text-decoration: none;
  font-family: sans-serif;
  padding: .5em;
  background-color: #713837;
  color: #fff;
  border-radius: .25em;
}

.btn:hover {
  background-color: #f33;
}

